# DraftFly

./: CMakeLists.txt  README.md
include/: draftfly.h
src/: receiver.cpp  sender.cpp
tests/: test_draftfly_receiver.cpp  test_draftfly_sender.cpp
